--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
 
     <!-- Downloads section-->
-    <section id="services" class="py-5 border-bottom" id="downloads"  style="background: linear-gradient(to bottom, #f5f5f5, #d9d9d9);">
+    <section id="services" class="bg-light py-5" id="downloads">
         <div class="container px-5 my-5">
             <div class="row gx-5">
                 <div class="col-lg-4 mb-5 mb-lg-0">
@@ -190,27 +190,30 @@
         </div>
     </section>
 
-    <!-- Section on Bootstrap Grid System and Scalability -->
+    <!-- Section on Schaalbaarheid-->
     <section class="py-5">
         <div class="container px-5">
             <div class="row gx-5">
                 <div class="col-lg-12">
                     <div class="text-center">
-                        <h2 class="fw-bolder">Het Bootstrap Grid-systeem en Schaalbaarheid</h2>
-                        <p class="lead">Het Bootstrap-grid systeem werkt als een raster, vergelijkbaar met een denkbeeldige tabel met rijen en kolommen. Dit helpt bij het organiseren van de lay-out van je webpagina. Laten we dit visueel maken:</p>
+                        <h2 class="fw-bolder">Schaalbaarheid met Bootstrap</h2>
+                        <p class="lead">Een van de voordelen van Bootstrap is de schaalbaarheid en flexibiliteit die het biedt voor verschillende apparaten.</p>
                     </div>
-                    <div class="row">
-                        <div class="col-md-6">
-                            <p>Stel je voor dat dit je webpagina is. Deze rijen en kolommen zijn de bouwstenen van je lay-out.</p>
-                            <img src="https://via.placeholder.com/600x300" alt="Webpagina" style="width: 100%; height: auto;">
+                    <div class="row align-items-center">
+                        <div class="col-lg-6">
+                            <img src="assets/Mockup.png" alt="Schaalbaarheid" class="img-fluid" style="border-radius: 10px;">
                         </div>
-                        <div class="col-md-6">
-                            <p>Het Bootstrap-grid systeem verdeelt de ruimte in 12 gelijke kolommen. Deze kolommen passen zich aan aan verschillende schermgroottes.</p>
-                            <img src="https://via.placeholder.com/600x300" alt="Bootstrap Grid" style="width: 100%; height: auto;">
+                        <div class="col-lg-6">
+                            <h3 class="fw-bold">Responsieve en Aanpasbare Lay-outs</h3>
+                            <p>Bootstrap maakt gebruik van een responsief grid-systeem dat het mogelijk maakt om de lay-out van een website op een schaalbare en consistente manier weer te geven op verschillende apparaten en schermformaten.</p>
+                            <p>Dit betekent dat elementen zoals kolommen, teksten en afbeeldingen op een slimme manier kunnen worden aangepast en geherstructureerd om een optimale gebruikerservaring te bieden, ongeacht of het op een desktop, tablet of mobiel apparaat wordt bekeken.</p>
+                            <p>De flexibiliteit van Bootstrap stelt ontwikkelaars in staat om met gemak aanpassingen te maken en te zorgen dat de website er op elk apparaat goed uitziet.</p>
+                            <div class="mt-4">
+                                <h4>Flexibel en Krachtig</h4>
+                                <p>Bootstrap biedt een krachtig framework dat kan worden aangepast aan verschillende lay-outbehoeften. Door gebruik te maken van Bootstrap's classes en componenten kunnen ontwikkelaars snel schakelen tussen lay-outs voor verschillende schermgroottes zonder de consistentie te verliezen.</p>
+                            </div>
                         </div>
                     </div>
-                    <p class="lead">Elke rij kan opgedeeld worden in kolommen die samen 12 eenheden vormen. Je kunt beslissen hoeveel eenheden elke sectie inneemt, en ze aanpassen voor verschillende schermgroottes.</p>
-                    <p>Het mooie van dit systeem is dat het de lay-out consistent houdt, ongeacht of het op een groot scherm, tablet of mobiel wordt bekeken. Het past zich automatisch aan, zodat je webpagina er altijd goed uitziet.</p>
                 </div>
             </div>
         </div>
@@ -219,7 +222,7 @@
 
     
     <!-- About Us section -->
-    <section id="about-us" class="py-5">
+    <section id="about-us" class="bg-light py-5">
         <div class="container px-5">
             <div class="row gx-5">
                 <div class="col-lg-12">
@@ -232,7 +235,7 @@
         </div>
     </section>
     <!-- Contact section-->
-    <section id="contact" class="bg-light py-5">
+    <section id="contact" class="py-5">
         <div class="container px-5 my-5 px-5">
             <div class="text-center mb-5">
                 <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-envelope"></i>
@@ -307,7 +310,7 @@
         </div>
     </section>
     <!-- Footer-->
-    <footer class="py-5 bg-dark">
+    <footer class="py-5 bg-dark"  style="background-image: url('assets/gradient_housestyle.png'); background-size: cover;">
         <div class="container px-5">
             <p class="m-0 text-center text-white">Copyright &copy; Beetje Moe 2023</p>
         </div>
