deleted files, added gradient hover

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <!-- Responsive navbar-->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" style="background-image: url('assets/gradient_housestyle.png'); background-size: cover;">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" style="background: linear-gradient(to right, #6854A4, #F85C64); background-size: cover;">
         <div class="container px-5">
             <a class="navbar-brand" href="#home">
                 <img src="assets/slowflowslak.png" alt="Logo Beetje moe" class="navbar-logo">
@@ -41,7 +41,7 @@
 
     <!-- Header-->
     <section id="home">
-    <header class="bg-dark py-5" style="background-image: url('assets/gradient_housestyle.png'); background-size: cover;">
+    <header class="bg-dark py-5" style="background: linear-gradient(to right, #6854A4, #F85C64); background-size: cover;">
         <div class="container px-5">
             <div class="row gx-5 justify-content-center">
                 <div class="col-lg-6">
@@ -78,9 +78,10 @@
                 </div>
             </div>
         </div>
+
         <div class="row gx-5 justify-content-center">
             <div class="col-lg-4 card-hover mb-4">
-                <div class="card" style="background-image: url('assets/gradient_dark.jpg'); background-size: cover;">
+                <div class="card card-gradient">
                     <div class="card-overlay"></div>
                     <div class="card-body">
                         <i class="bi bi-phone text-primary fs-2 mb-3"></i>
@@ -88,10 +89,10 @@
                         <p class="card-text">Bootstrap zorgt ervoor dat je website er geweldig uitziet op verschillende schermgroottes en apparaten.</p>
                     </div>
                 </div>
-            </div>
+            </div>      
             <!-- Additional Card Sections -->
             <div class="col-lg-4 card-hover mb-4">
-                <div class="card" style="background-image: url('assets/gradient_dark.jpg'); background-size: cover;">
+                <div class="card card-gradient">
                     <div class="card-overlay"></div>
                     <div class="card-body">
                         <i class="bi bi-code text-primary fs-2 mb-3"></i>
@@ -101,7 +102,7 @@
                 </div>
             </div>
             <div class="col-lg-4 card-hover mb-4">
-                <div class="card" style="background-image: url('assets/gradient_dark.jpg'); background-size: cover;">
+                <div class="card card-gradient">
                     <div class="card-overlay"></div>
                     <div class="card-body">
                         <i class="bi bi-palette text-primary fs-2 mb-3"></i>
@@ -111,7 +112,7 @@
                 </div>
             </div>
             <div class="col-lg-4 card-hover mb-4">
-                <div class="card" style="background-image: url('assets/gradient_dark.jpg'); background-size: cover;">
+                <div class="card card-gradient">
                     <div class="card-overlay"></div>
                     <div class="card-body">
                         <i class="bi bi-layout-text-window-reverse text-primary fs-2 mb-3"></i>
@@ -121,7 +122,7 @@
                 </div>
             </div>
             <div class="col-lg-4 card-hover mb-4">
-                <div class="card" style="background-image: url('assets/gradient_dark.jpg'); background-size: cover;">
+                <div class="card card-gradient">
                     <div class="card-overlay"></div>
                     <div class="card-body">
                         <i class="bi bi-gear text-primary fs-2 mb-3"></i>
@@ -132,7 +133,7 @@
             </div>
             
             <div class="col-lg-4 card-hover mb-4">
-                <div class="card" style="background-image: url('assets/gradient_dark.jpg'); background-size: cover;">
+                <div class="card card-gradient">
                     <div class="card-overlay"></div>
                     <div class="card-body">
                         <i class="bi bi-lightbulb text-primary fs-2 mb-3"></i>
@@ -161,7 +162,7 @@
                             class="bi bi-collection"></i></div>
                     <h2 class="h4 fw-bolder">Download template</h2>
                     <p>Druk op de link hieronder om te komen in onze Github Repository waar je het template kan downloaden. Met dit template kan je starten met het maken van je eigen Bootstrap website!</p>
-                    <a class="text-decoration-none" href="#!">
+                    <a class="text-decoration-none" href="https://github.com/ArjanB96/ArjanB96.github.io" target="_blank">
                         Download template
                         <i class="bi bi-arrow-right"></i>
                     </a>
@@ -171,7 +172,7 @@
                     </div>
                     <h2 class="h4 fw-bolder">Download de opdracht</h2>
                     <p>Door op de knop hieronder te drukken, kun je de opdracht downloaden. Dit is de opdracht waar we met deze workshop mee aan de slag gaan</p>
-                    <a class="text-decoration-none" href="#!">
+                    <a class="text-decoration-none" href="https://github.com/ArjanB96/ArjanB96.github.io" target="_blank">
                         Download opdracht
                         <i class="bi bi-arrow-right"></i>
                     </a>
@@ -181,7 +182,7 @@
                     </div>
                     <h2 class="h4 fw-bolder">Bekijk onze sourcecode!</h2>
                     <p>Onze sourcecode is te bekijken in de link hieronder!</p>
-                    <a class="text-decoration-none" href="https://github.com/ivydk/BeetjeMoe" target="_blank">
+                    <a class="text-decoration-none" href="https://github.com/ArjanB96/ArjanB96.github.io" target="_blank">
                         Ga naar de source code
                         <i class="bi bi-arrow-right"></i>
                     </a>
@@ -219,23 +220,48 @@
         </div>
     </section>
 
-
+    <!-- Section about Bootstrap Costs -->
+    <section class="bg-light py-5">
+        <div class="container px-5">
+            <div class="row gx-5">
+                <div class="col-lg-12">
+                    <div class="text-center">
+                        <h2 class="fw-bolder">Kosten van Bootstrap</h2>
+                        <p class="lead">
+                            Bootstrap is een gratis en open-source framework. Het wordt geleverd met een MIT-licentie, wat betekent dat je het gratis kunt gebruiken, aanpassen en distribueren, zelfs voor commerciële projecten. Er zijn geen directe kosten verbonden aan het gebruik van Bootstrap zelf.
+                        </p>
+                        <p class="lead">
+                            Echter, het kan zijn dat je kosten hebt voor de implementatie, aanpassing, training van medewerkers, of het inhuren van experts om Bootstrap effectief te gebruiken in je projecten.
+                        </p>
+                        <p class="lead">
+                            Zorg ervoor dat je de licentievoorwaarden en de kosten van eventuele externe tools, thema's, of plug-ins die je in combinatie met Bootstrap gebruikt, goed begrijpt.
+                        </p>
+                        <p class="lead">
+                            De enige kosten die je kan krijgen zijn de hostingkosten. Via Github kan je wel je eigen website gratis hosten, zoals deze website.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     
     <!-- About Us section -->
-    <section id="about-us" class="bg-light py-5">
+    <section id="about-us" class="py-5">
         <div class="container px-5">
             <div class="row gx-5">
                 <div class="col-lg-12">
                     <div class="text-center">
                         <h2 class="fw-bolder">Over Ons</h2>
-                        <p>Hallo! Wij zijn Ivy en Arjan en wij zijn Beetje Moe!</p>
+                        <p class="lead">
+                            Hallo! Wij zijn Ivy en Arjan en wij zijn Beetje Moe!
+                        </p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
     <!-- Contact section-->
-    <section id="contact" class="py-5">
+    <section id="contact" class="bg-light py-5">
         <div class="container px-5 my-5 px-5">
             <div class="text-center mb-5">
                 <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-envelope"></i>
@@ -310,7 +336,7 @@
         </div>
     </section>
     <!-- Footer-->
-    <footer class="py-5 bg-dark"  style="background-image: url('assets/gradient_housestyle.png'); background-size: cover;">
+    <footer class="py-5 bg-dark" style="background: linear-gradient(to right, #6854A4, #F85C64); background-size: cover;">
         <div class="container px-5">
             <p class="m-0 text-center text-white">Copyright &copy; Beetje Moe 2023</p>
         </div>
