--- a/index.html
+++ b/index.html
@@ -53,9 +53,8 @@
                             <a class="btn btn-outline-light btn-lg px-4" href="#downloads">Beginnen met Bootstrap</a>
                             <a class="btn btn-outline-light btn-lg px-4" href="#about-us">Over Ons</a>
                             <a class="btn btn-outline-light btn-lg px-4 instagram-button" href="https://www.instagram.com/beetjemoe_ux/" target="_blank">
-                                <img src="assets/logo_instagram.png" alt="Instagram" class="social-icon">
+                                <img src="assets/logo_instagram_2.png" alt="Instagram" class="social-icon">
                             </a>
-                            
                         </div>
                     </div>
                 </div>
@@ -148,11 +147,6 @@
     </div>
 </section>
 
-    
-
-
-
-
     <!-- Downloads section-->
     <section id="services" class="bg-light py-5" id="downloads">
         <div class="container px-5 my-5">
@@ -202,7 +196,9 @@
                     </div>
                     <div class="row align-items-center">
                         <div class="col-lg-6">
-                            <img src="assets/Mockup.png" alt="Schaalbaarheid" class="img-fluid" style="border-radius: 10px;">
+                            <div class="img-container">
+                                <img src="assets/Mockup.png" alt="Schaalbaarheid" class="img-fluid zoom-effect" style="border-radius: 10px;">
+                            </div>
                         </div>
                         <div class="col-lg-6">
                             <h3 class="fw-bold">Responsieve en Aanpasbare Lay-outs</h3>
@@ -217,8 +213,7 @@
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
 
     <!-- Section about Bootstrap Costs -->
     <section class="bg-light py-5">
