--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
 </head>
 
 <body>
+
+    <div class="loading-overlay">
+        <div class="custom-loader-container">
+            <img src="assets/slowflowslak.png" alt="Loading..." class="custom-loader">
+            <div class="trail"></div>
+        </div>
+    </div>
+
+
     <!-- Responsive navbar-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" style="background: linear-gradient(to right, #6854A4, #F85C64); background-size: cover;">
         <div class="container px-5">
