--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 </head>
 
 <body>
-
     <div class="loading-overlay">
         <div class="custom-loader-container">
             <img src="assets/slowflowslak.png" alt="Loading..." class="custom-loader">
@@ -285,34 +284,34 @@
                     <form id="contactForm" data-sb-form-api-token="API_TOKEN">
                         <!-- Name input-->
                         <div class="form-floating mb-3">
-                            <input class="form-control" id="name" type="text" placeholder="Enter your name..."
+                            <input class="form-control" id="name" type="text" placeholder="naam"
                                 data-sb-validations="required" />
-                            <label for="name">Full name</label>
-                            <div class="invalid-feedback" data-sb-feedback="name:required">A name is required.</div>
+                            <label for="name">Naam</label>
+                            <div class="invalid-feedback" data-sb-feedback="name:required">Er moet een naam ingevuld worden</div>
                         </div>
                         <!-- Email address input-->
                         <div class="form-floating mb-3">
                             <input class="form-control" id="email" type="email" placeholder="name@example.com"
                                 data-sb-validations="required,email" />
-                            <label for="email">Email address</label>
-                            <div class="invalid-feedback" data-sb-feedback="email:required">An email is required.</div>
-                            <div class="invalid-feedback" data-sb-feedback="email:email">Email is not valid.</div>
+                            <label for="email">Email</label>
+                            <div class="invalid-feedback" data-sb-feedback="email:required">Je moet een emailadres invullen.</div>
+                            <div class="invalid-feedback" data-sb-feedback="email:email">Email is niet geldig.</div>
                         </div>
                         <!-- Phone number input-->
                         <div class="form-floating mb-3">
-                            <input class="form-control" id="phone" type="tel" placeholder="(123) 456-7890"
+                            <input class="form-control" id="phone" type="tel" placeholder="06 1234 5678"
                                 data-sb-validations="required" />
-                            <label for="phone">Phone number</label>
-                            <div class="invalid-feedback" data-sb-feedback="phone:required">A phone number is required.
+                            <label for="phone">Telefoonnummer</label>
+                            <div class="invalid-feedback" data-sb-feedback="phone:required">Je moet een telefoonnummer invullen.
                             </div>
                         </div>
                         <!-- Message input-->
                         <div class="form-floating mb-3">
                             <textarea class="form-control" id="message" type="text"
-                                placeholder="Enter your message here..." style="height: 10rem"
+                                placeholder="Typ je bericht hier..." style="height: 10rem"
                                 data-sb-validations="required"></textarea>
-                            <label for="message">Message</label>
-                            <div class="invalid-feedback" data-sb-feedback="message:required">A message is required.
+                            <label for="message">Bericht</label>
+                            <div class="invalid-feedback" data-sb-feedback="message:required">Je moet een bericht invullen.
                             </div>
                         </div>
                         <!-- Submit success message-->
@@ -321,7 +320,7 @@
                         <!-- has successfully submitted-->
                         <div class="d-none" id="submitSuccessMessage">
                             <div class="text-center mb-3">
-                                <div class="fw-bolder">Form submission successful!</div>
+                                <div class="fw-bolder">Formulier verstuurd!</div>
                             </div>
                         </div>
                         <!-- Submit error message-->
@@ -329,11 +328,11 @@
                         <!-- This is what your users will see when there is-->
                         <!-- an error submitting the form-->
                         <div class="d-none" id="submitErrorMessage">
-                            <div class="text-center text-danger mb-3">Error sending message!</div>
+                            <div class="text-center text-danger mb-3">Error!</div>
                         </div>
                         <!-- Submit Button-->
                         <div class="d-grid"><button class="btn btn-primary btn-lg disabled" id="submitButton"
-                                type="submit">Submit</button></div>
+                                type="submit">Verstuur</button></div>
                     </form>
                 </div>
             </div>
