removed downloads url routing

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <p class="lead text-white-50 mb-4">Wij zijn Beetje Moe en wij willen jullie graag leren hoe je
                             kan beginnen met Bootstrap</p>
                         <div class="d-grid gap-3 d-sm-flex justify-content-sm-center">
-                            <a class="btn btn-outline-light btn-lg px-4" href="#downloads">Beginnen met Bootstrap</a>
+                            <a class="btn btn-outline-light btn-lg px-4" href="#services">Beginnen met Bootstrap</a>
                             <a class="btn btn-outline-light btn-lg px-4" href="#about-us">Over Ons</a>
                             <a class="btn btn-outline-light btn-lg px-4 instagram-button" href="https://www.instagram.com/beetjemoe_ux/" target="_blank">
                                 <img src="assets/logo_instagram_2.png" alt="Instagram" class="social-icon">
@@ -155,8 +155,9 @@
     </div>
 </section>
 
+
     <!-- Downloads section-->
-    <section id="services" class="bg-light py-5" id="downloads">
+    <section id="services" class="bg-light py-5">
         <div class="container px-5 my-5">
             <div class="row gx-5">
                 <div class="col-lg-4 mb-5 mb-lg-0">
@@ -274,13 +275,6 @@
             </div>
             <div class="row gx-5 justify-content-center">
                 <div class="col-lg-6">
-                    <!-- * * * * * * * * * * * * * * *-->
-                    <!-- * * SB Forms Contact Form * *-->
-                    <!-- * * * * * * * * * * * * * * *-->
-                    <!-- This form is pre-integrated with SB Forms.-->
-                    <!-- To make this form functional, sign up at-->
-                    <!-- https://startbootstrap.com/solution/contact-forms-->
-                    <!-- to get an API token!-->
                     <form id="contactForm" data-sb-form-api-token="API_TOKEN">
                         <!-- Name input-->
                         <div class="form-floating mb-3">
@@ -350,10 +344,6 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!-- Core theme JS-->
     <script src="js/scripts.js"></script>
-    <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-    <!-- * *                               SB Forms JS                               * *-->
-    <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
-    <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
     <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
 </body>
 
