--- a/index.html
+++ b/index.html
@@ -237,16 +237,13 @@
         <div class="container px-5">
             <div class="row gx-5">
                 <div class="col-lg-12">
-                    <div class="text-center">
-                        <h2 class="fw-bolder">Schaalbaarheid met Bootstrap</h2>
-                        <p class="lead">Een van de voordelen van Bootstrap is de schaalbaarheid en flexibiliteit die het biedt voor verschillende apparaten.</p><br>
-                    </div>
-                    <div class="row align-items-center">
+                    <div class="row align-items-right">
                         <div class="col-lg-6">
                             <div class="img-container">
-                                <img src="assets/Mockup.png" alt="Schaalbaarheid" class="img-fluid zoom-effect" style="border-radius: 10px;">
+                                <img src="assets/Mockup2.png" alt="Schaalbaarheid" class="img-fluid zoom-effect" style="border-radius: 10px;">
                             </div>
                         </div>
+                        
                         <div class="col-lg-6">
                             <h3 class="fw-bold">Responsieve en Aanpasbare Lay-outs</h3>
                             <p class="lead">Bootstrap maakt gebruik van een responsief grid-systeem dat het mogelijk maakt om de lay-out van een website op een schaalbare en consistente manier weer te geven op verschillende apparaten en schermformaten.</p>
@@ -267,7 +264,7 @@
         <div class="container px-5">
             <div class="row gx-5">
                 <div class="col-lg-12">
-                    <div class="text-center">
+                    <div class="text-left">
                         <h2 class="fw-bolder">Kosten van Bootstrap</h2>
                         <p class="lead">
                             Bootstrap is een gratis en open-source framework. Het wordt geleverd met een MIT-licentie, wat betekent dat je het gratis kunt gebruiken, aanpassen en distribueren, zelfs voor commerciële projecten. Er zijn geen directe kosten verbonden aan het gebruik van Bootstrap zelf.
@@ -331,7 +328,7 @@
     <div class="container px-5">
         <div class="row gx-5">
             <div class="col-lg-12">
-                <div class="text-center">
+                <div class="text-left">
                     <h2 class="fw-bolder">Conclusie</h2>
                     <p class="lead">
                         De implementatie van Bootstrap binnen deze website laat de kracht zien van Bootstrap in het ontwikkelen van responsieve, aantrekkelijke websites.
@@ -369,7 +366,7 @@
         <div class="container px-5">
             <div class="row gx-5">
                 <div class="col-lg-12">
-                    <div class="text-center">
+                    <div class="text-left">
                         <h2 class="fw-bolder">Over Ons</h2>
                         <p class="lead">
                             Hallo! Wij zijn Ivy en Arjan en wij zijn Beetje Moe!<br>
