--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                                 class="bi bi-collection"></i></div>
                         <h3 class="h4 fw-bold">Download template</h3>
                         <p class="lead">Druk op de link hieronder om te komen in onze Github Repository waar je het template kan downloaden. Met dit template kan je starten met het maken van je eigen Bootstrap website!</p>
-                        <a class="text-decoration-none" href="https://github.com/ArjanB96/ArjanB96.github.io" target="_blank">
+                        <a class="text-decoration-none" href="https://github.com/ArjanB96/Bootstrap-Workshop-Minor-" target="_blank">
                             Download template
                             <i class="bi bi-arrow-right"></i>
                         </a>
