added .pdf with opdrachten

--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                         </div>
                         <h3 class="h4 fw-bolder">Download de opdracht</h3>
                         <p class="lead">Door op de knop hieronder te drukken, kun je de opdracht downloaden. Dit is de opdracht waar we met deze workshop mee aan de slag gaan</p>
-                        <a class="text-decoration-none" href="https://github.com/ArjanB96/ArjanB96.github.io" target="_blank">
+                        <a class="text-decoration-none" href="assets/Opdrachten_Workshop.pdf" download="Opdrachten_Workshop.pdf" target="_blank">
                             Download opdracht
                             <i class="bi bi-arrow-right"></i>
                         </a>
